tests/new_bad_allocator_readonly.stderr
tests/new_bad_allocator_readonly.sl:92:94: error: type mismatch
